# hexide

./: Cargo.toml  index.html
.github/: ci.yml
.github/workflows/: benchmark.yml  ci.yml
benches/: benchmarks.rs
encoding/: index.html
encoding/1024B/: index.html
encoding/16384B/: index.html
encoding/16B/: index.html
encoding/1B/: index.html
encoding/2048B/: index.html
encoding/2B/: index.html
encoding/32768B/: index.html
encoding/32B/: index.html
encoding/4096B/: index.html
encoding/4B/: index.html
encoding/64B/: index.html
encoding/8192B/: index.html
encoding/8B/: index.html
encoding/faster_hex/: index.html
encoding/faster_hex/1024B/: index.html
encoding/faster_hex/16384B/: index.html
encoding/faster_hex/16B/: index.html
encoding/faster_hex/1B/: index.html
encoding/faster_hex/2048B/: index.html
encoding/faster_hex/2B/: index.html
encoding/faster_hex/32768B/: index.html
encoding/faster_hex/32B/: index.html
encoding/faster_hex/4096B/: index.html
encoding/faster_hex/4B/: index.html
encoding/faster_hex/64B/: index.html
encoding/faster_hex/8192B/: index.html
encoding/faster_hex/8B/: index.html
encoding/hex/: index.html
encoding/hex/1024B/: index.html
encoding/hex/16384B/: index.html
encoding/hex/16B/: index.html
encoding/hex/1B/: index.html
encoding/hex/2048B/: index.html
encoding/hex/2B/: index.html
encoding/hex/32768B/: index.html
encoding/hex/32B/: index.html
encoding/hex/4096B/: index.html
encoding/hex/4B/: index.html
encoding/hexide/: index.html
src/: impl_.rs  iter.rs  lib.rs
(+16 files in other folders)
