[package]
name = "hexide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
hex = "0.4.3"
faster-hex = "0.6.1"
rand = "0.8.4"

[features]
default = []
nightly = []

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
opt-level = 3
lto = true